# blueprint

./: .gitignore  GIT_SETUP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json  voice.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  hotkeys.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  clients.rs  mod.rs  notes.rs  notifications.rs  services.rs  settings.rs
src/components/: CommandPalette.tsx  Layout.tsx  ToastProvider.tsx  WelcomeScreen.tsx
src/components/Overlay/: index.tsx
src/components/TitleBar/: index.tsx
src/components/VoiceIndicator/: index.tsx
src/pages/: Chat.tsx  Clients.tsx  Notes.tsx  Services.tsx  Settings.tsx
src/stores/: chatStore.ts  clientsStore.ts  notesStore.ts  servicesStore.ts  settingsStore.ts
